<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profileImageButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/profile_pic"
            android:src="@drawable/camera_icon_foreground" />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextMiddleName"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/middle_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit_button" />

        <TextView
            android:id="@+id/textViewErrorMessage"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>